# Trinx-AI-Chatbot-Premium

./: .env.example  .gitattributes  .gitignore  app.py  pyproject.toml  pytest.ini
.github/workflows/: main.yaml  test.yaml
data/: trinity_coin_ai_qa.md
frontend/: app.py
src/agent/: graph.py  nodes.py  routes.py
src/agent/nodes/: answer_compose.py  fetch_price.py  file_upload_qa.py  query_router.py  trinity_details.py  web_search.py
src/api/: main.py  middleware.py  scheme.py
src/core/: config.py  llm_routes.py  logging.py  state.py  state_manager.py
src/prompts/: answer_node_prompt.yaml  fetch_price_node_prompt.yaml  router_prompt.yaml  trinity_info_node.yaml
src/prompts/config/: prompt_import.py
src/rag/: rag_store.py
src/tools/: fetch_coin_price.py  serper_web_search.py  web_search.py
src/utils/: document_loader.py
test/: conftest.py  test_agent.py
