[project]
name = "TrinX-AI-chatbot-Premium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.5.4",
    "ngrok>=1.5.1",
    "pydantic>=2.11.7",
    "pyngrok>=7.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.5",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]
