[project]
name = "TrinX-AI-chatbot-Premium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.33",
    "langchain-pinecone>=0.2.12",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-redis>=0.1.2",
    "langsmith>=0.4.8",
    "pydantic>=2.11.7",
    "pymongo>=4.14.1",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "unstructured[docx,md]>=0.18.15",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pyngrok>=7.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "streamlit>=1.47.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
